--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@prisma/client": "^6.1.0",
+    "cors": "^2.8.5",
     "hono": "^4.6.14"
   }
 }
