--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "@hono/node-server": "^1.13.7",
     "@prisma/client": "^6.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "hono": "^4.6.14"
   }
 }
