honoのサーバー立ち上げ完了

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,10 @@
     "nodemon": "^3.1.9",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
+  },
+  "scripts": {
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   }
 }
