--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,34 @@
 {
+  "name": "diary-backend",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio"
+  },
   "dependencies": {
-    "@hono/node-server": "^1.13.7",
-    "@prisma/client": "^6.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "hono": "^4.6.14"
+    "@hono/node-server": "^1.3.3",
+    "@prisma/client": "^5.7.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "hono": "^3.11.7",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "nodemon": "^3.1.9",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
-  },
-  "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.5",
+    "@vitest/coverage-v8": "^2.1.8",
+    "prisma": "^5.7.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
+    "vitest": "^2.1.8"
   }
 }
