--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,9 +19,11 @@
       }
     ],
     "paths": {
-      "@/*": ["../src/*"]
-    }
+      "@/*": ["./src/*"]
+    },
+    "types": ["vitest/globals", "@testing-library/jest-dom"],
+    "baseUrl": "."
   },
-  "include": ["frontend/next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
