--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,6 @@
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.1.2",
     "playwright": "^1.49.1",
@@ -45,5 +46,17 @@
     "typescript": "^5.7.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.11",
+    "ts-jest": "^29.2.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm test"
+    ]
   }
 }
