--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
@@ -51,6 +52,7 @@
     "@types/jest": "^29.5.14",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.11",
     "ts-jest": "^29.2.5"
   },
