--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --bail",
     "test:watch": "jest --watch",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
@@ -58,7 +58,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "npm test"
+      "jest --bail --findRelatedTests"
     ]
   }
 }
