--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "jest --passWithNoTests --bail",
+    "test": "jest",
     "test:watch": "jest --watch",
     "prepare": "husky",
     "lint-staged": "lint-staged"
@@ -28,37 +28,42 @@
     "@hono/node-server": "^1.13.7",
     "@prisma/client": "^6.1.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "autoprefixer": "^10.4.20",
+    "@testing-library/react": "^14.2.1",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
     "bcrypt": "^5.1.1",
-    "clsx": "^2.1.1",
+    "clsx": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "^15.1.2",
-    "playwright": "^1.49.1",
-    "postcss": "^8.4.49",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "shadcn-ui": "^0.9.4",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.2"
+    "next": "^14.1.0",
+    "playwright": "^1.41.2",
+    "postcss": "^8.4.35",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "shadcn-ui": "^0.8.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "husky": "^9.1.7",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.12",
+    "babel-jest": "^29.7.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.11",
-    "ts-jest": "^29.2.5"
+    "lint-staged": "^15.2.2",
+    "ts-jest": "^29.1.2"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "jest --bail --findRelatedTests"
+      "jest --bail --passWithNoTests --findRelatedTests"
     ]
   }
 }
